--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -93,14 +93,24 @@
         <span id="topFive">Top 5 Disbursemented Items</span>
     </div>
     <form method="POST">
-        <div class="show_select_delta center">
+        <div class="show_select_delta">
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"> 
-            {% for delta in [7,30,60,180] %}
+            {% for delta in [7,30,90,180] %}
                     <button class="delta-item" onclick="form.submit" name="getdelta" value="{{delta}}">
                         {% if delta < 30 %}
-                            {{ delta }} day
+                            {{ delta }}
+                            {% if delta == 1 %}
+                                <span class="dayRange">day</span>
+                            {% else %}
+                                <span class="daysRange">days</span>
+                            {% endif %}
                         {% else %}
-                            {{ delta//30 }} month
+                            {{ delta//30 }}
+                            {% if delta == 30 %}
+                                <span class="monthRange">month</span>
+                            {% else %}
+                                <span class="monthsRange">months</span>
+                            {% endif %}
                         {% endif %}
                     </button> 
             {% endfor %}
@@ -257,7 +267,11 @@
             stock: "Stock",
             qrScan: "QR Scan",
             manageAdmin: "Manage Admin",
-            contactAdmin: "Admin Contact"
+            contactAdmin: "Admin Contact",
+            dayRange: "day",
+            daysRange: "days",
+            monthRange: "month",
+            monthsRange: "months",
         },
         th: {
             welcome: "ยินดีต้อนรับ",
@@ -274,7 +288,11 @@
             stock: "คลัง",
             qrScan: "สแกน QR",
             manageAdmin: "จัดการแอดมิน",
-            contactAdmin: "ติดต่อแอดมิน"
+            contactAdmin: "ติดต่อแอดมิน",
+            dayRange: "วัน",
+            daysRange: "วัน",
+            monthRange: "เดือน",
+            monthsRange: "เดือน",
         }
     };
 
@@ -286,6 +304,18 @@
         document.querySelector('#topFive').textContent = (translations[lang].topFive);
         document.querySelector('#stock').textContent = (translations[lang].stock);
         document.querySelector('#qrScan').textContent = (translations[lang].qrScan);
+        document.querySelectorAll('.dayRange').forEach(e => {
+            e.textContent = (translations[lang].dayRange);
+        });
+        document.querySelectorAll('.daysRange').forEach(e => {
+            e.textContent = (translations[lang].daysRange);
+        });
+        document.querySelectorAll('.monthRange').forEach(e => {
+            e.textContent = (translations[lang].monthRange);
+        });
+        document.querySelectorAll('.monthsRange').forEach(e => {
+            e.textContent = (translations[lang].monthsRange);
+        });
     }
 
     function changeLanguageHaveData(lang) {
