--- a/flask/app/templates/category.html
+++ b/flask/app/templates/category.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pridi:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/category.css') }}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=download" />
     <title>Category Page</title>
 </head>
 <body>
@@ -30,7 +31,10 @@
         </div>
         <h1 class="page-title" id="title">Category</h1>
         <div class="cart">
-            <a href="{{ url_for('cart')}}" class="cart-link">
+            <a href="{{ url_for('exportStock') }}" class="back-btn export-btn">
+                <span class="material-symbols-outlined">download</span>
+            </a>
+            <a href="{{ url_for('cart')}}" class="back-btn">
                 <i class="material-icons">shopping_cart</i>
                 {% if cart_count > 0 %}
                 <span class="cart-badge">{{ cart_count }}</span>
@@ -52,15 +56,13 @@
             <span class="material-icons">search</span>
             <input type="text" class="search-input" placeholder="Search" id="search">
         </div>
-        {%if (current_user.is_admin or current_user.is_sadmin)%}
-            <div class="edit-cate">
-                <a href="{{ url_for('cate_edit') }}" class="back-btn">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
-                        <path d="M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z"/>
-                    </svg>
-                </a>
-            </div>
-        {%endif%}
+        <div class="edit-cate">
+            <a href="{{ url_for('cate_edit') }}" class="back-btn">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
+                    <path d="M200-200h57l391-391-57-57-391 391v57Zm-80 80v-170l528-527q12-11 26.5-17t30.5-6q16 0 31 6t26 18l55 56q12 11 17.5 26t5.5 30q0 16-5.5 30.5T817-647L290-120H120Zm640-584-56-56 56 56Zm-141 85-28-29 57 57-29-28Z"/>
+                </svg>
+            </a>
+        </div>
     </div>
 
     <div class="show_category">
