--- a/flask/app/templates/history.html
+++ b/flask/app/templates/history.html
@@ -28,7 +28,7 @@
             <span class="material-icons">arrow_back_ios</span>
         </a>
         <div class="center">
-            <span>History</span>
+            <span id="title">History</span>
         </div>
         <a href="{{ url_for('export') }}">
             <span class="material-symbols-outlined">download</span>
@@ -39,9 +39,9 @@
         {% for set in history %}
             {% if not (current_user.is_admin or current_user.is_sadmin) %}
                 {% if current_user.UserID == set.UserID %}
-                    <div class="item-text" data-id="{{ set.itemID }}">
+                    <div class="card" data-id="{{ set.itemID }}">
                         <div class="item">
-                            <div class="profile-wrapper">
+                            <!-- <div class="profile-wrapper">
                                 <div class="profile-circle">
                                     {% if current_user.profile_pic %}
                                         <img src="{{ current_user.profile_pic }}"  class="profile-img">
@@ -49,26 +49,42 @@
                                         <div class="user-icon">{{ current_user.Fname[0].upper() }}</div>
                                     {% endif %}
                                 </div>
+                            </div> -->
+                            <div class="item-text">
+                                <span class="withdrawer">Withdrawer</span><span>{{ set.user.Fname }} {{ set.user.Lname }}</span>
                             </div>
                             <div class="item-text">
-                                <span class="item-text">Withdrawer: {{ set.user.Fname }} {{ set.user.Lname }}</span>
-                                <span class="item-text">Item name: {{ set.items.itemName }}</span>
-                                <span class="item-text">Item amount: {{ set.Quantity }}</span>
-                                <span class="item-text">Category: {{ set.items.category.cateName }}</span>
-                                <span class="item-text">Withdraw time: {{ (set.DateTime|string)[0:19] }}</span>
+                                <span class="itemName">Item name</span><span>{{ set.items.itemName }}</span>
+                            </div>
+                            <div class="item-text">
+                                <span class="itemAmount">Item amount</span><span>{{ set.Quantity }}</span>
+                            </div>
+                            <div class="item-text">
+                                <span class="category">Category</span><span>{{ set.items.category.cateName }}</span>
+                            </div>
+                            <div class="item-text">
+                                <span class="time">Withdraw time</span><span>{{ (set.DateTime|string)[0:19] }}</span>
                             </div>
                         </div>
                     </div>
                 {% endif %}
             {% else %}
-            <div class="item-text" data-id="{{ set.itemID }}">
+            <div class="card" data-id="{{ set.itemID }}">
                 <div class="item">
                     <div class="item-text">
-                        <span class="item-text">Withdrawer: {{ set.user.Fname }} {{ set.user.Lname }}</span>
-                        <span class="item-text">Item name: {{ set.items.itemName }}</span>
-                        <span class="item-text">Item amount: {{ set.Quantity }}</span>
-                        <span class="item-text">Category: {{ set.items.category.cateName }}</span>
-                        <span class="item-text">Withdraw time: {{ (set.DateTime|string)[0:19] }}</span>
+                        <span class="withdrawer">Withdrawer</span><span>{{ set.user.Fname }} {{ set.user.Lname }}</span>
+                    </div>
+                    <div class="item-text">
+                        <span class="itemName">Item name</span><span>{{ set.items.itemName }}</span>
+                    </div>
+                    <div class="item-text">
+                        <span class="itemAmount">Item amount</span><span>{{ set.Quantity }}</span>
+                    </div>
+                    <div class="item-text">
+                        <span class="category">Category</span><span>{{ set.items.category.cateName }}</span>
+                    </div>
+                    <div class="item-text">
+                        <span class="time">Withdraw time</span><span>{{ (set.DateTime|string)[0:19] }}</span>
                     </div>
                 </div>
             </div>
@@ -78,43 +94,47 @@
     {% else %}
         <p class="item-text" id="noData">No data yet</p>
     {% endif %}
-
-    <!-- <div class="item" data-id="1">
-        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M234-276q51-39 114-61.5T480-360q69 0 132 22.5T726-276q35-41 54.5-93T800-480q0-133-93.5-226.5T480-800q-133 0-226.5 93.5T160-480q0 59 19.5 111t54.5 93Zm246-164q-59 0-99.5-40.5T340-580q0-59 40.5-99.5T480-720q59 0 99.5 40.5T620-580q0 59-40.5 99.5T480-440Zm0 360q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Z"/></svg>
-        <div class="column">
-            <div class="item-text">
-                <span>Fname Lname has disbursemented</span>
-                <span>15.00 6 Sep 2025</span>
-            </div>
-            <details class="detail">
-                <span>Pen x2</span>
-                <span>Hammer x10</span>
-                <span>Hehe x10</span>
-                <span>Hehe x10</span>
-                <span>Hehe x10</span>
-                <span>Hehe x10</span>
-                <span>Hehe x10</span>
-                <span>Hehe x10</span>
-            </details>
-        </div>
-    </div>
-
-    <div class="item" data-id="2">
-        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M234-276q51-39 114-61.5T480-360q69 0 132 22.5T726-276q35-41 54.5-93T800-480q0-133-93.5-226.5T480-800q-133 0-226.5 93.5T160-480q0 59 19.5 111t54.5 93Zm246-164q-59 0-99.5-40.5T340-580q0-59 40.5-99.5T480-720q59 0 99.5 40.5T620-580q0 59-40.5 99.5T480-440Zm0 360q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Z"/></svg>
-        <div class="item-text">
-            <span>Fname Lname has disbursemented</span>
-            <span>15.00 6 Sep 2025</span>
-        </div>
-    </div>
-
-    <div class="item">
-        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M234-276q51-39 114-61.5T480-360q69 0 132 22.5T726-276q35-41 54.5-93T800-480q0-133-93.5-226.5T480-800q-133 0-226.5 93.5T160-480q0 59 19.5 111t54.5 93Zm246-164q-59 0-99.5-40.5T340-580q0-59 40.5-99.5T480-720q59 0 99.5 40.5T620-580q0 59-40.5 99.5T480-440Zm0 360q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Z"/></svg>
-        <div class="item-text">
-            <span>Fname Lname has disbursemented.</span>
-            <span>15.00 6 Sep 2025</span>
-        </div>
-    </div> -->
-    <!-- กด card item แล้ว drop down ของที่เบิก -->
 </body>
+<script>
+    const translations = {
+        en: {
+            title: "History",
+            withdrawer: "Withdrawer",
+            itemName: "Item name",
+            itemAmount: "Item amount",
+            category: 'Category',
+            time: 'Withdraw time'
+        },
+        th: {
+            title: "ประวัติ",
+            withdrawer: "ผู้เบิก",
+            itemName: "ชื่อของ",
+            itemAmount: "จำนวนของ",
+            category: 'ประเภท',
+            time: 'เวลาที่เบิก'
+        }
+    };
+
+    function changeLanguage(lang) {
+        document.querySelector('#title').textContent = (translations[lang].title);
+        document.querySelectorAll('.withdrawer').forEach(e => {
+            e.textContent = (translations[lang].withdrawer);
+        });
+        document.querySelectorAll('.itemName').forEach(e => {
+            e.textContent = (translations[lang].itemName);
+        });
+        document.querySelectorAll('.itemAmount').forEach(e => {
+            e.textContent = (translations[lang].itemAmount);
+        });
+        document.querySelectorAll('.category').forEach(e => {
+            e.textContent = (translations[lang].category);
+        });
+        document.querySelectorAll('.time').forEach(e => {
+            e.textContent = (translations[lang].time);
+        });
+    }
+    
+    changeLanguage(localStorage.getItem('lang'));
+</script>
 </html>
 
