remove footer when print qr

--- a/flask/app/templates/edit.html
+++ b/flask/app/templates/edit.html
@@ -152,8 +152,8 @@
               <title>Print QR Code - ${itemName}</title>
               <style>
                   @page {
-                      size: A4 portrait; 
-                      margin: 2cm;      
+                      size: auto; 
+                      margin-bottom: 0mm;      
                   }
 
                   body { 
