--- a/flask/app/templates/category.html
+++ b/flask/app/templates/category.html
@@ -290,42 +290,38 @@
         const printWindow = window.open('', '_blank');
         printWindow.document.write(`
             <html>
-          <head>
-              <title>Print QR Code - ${itemName}</title>
-              <style>
-                  @page {
-                      size: A4 portrait; 
-                      margin: 2cm;      
-                  }
-
-                  body { 
-                      margin: 0; 
-                      padding: 0; 
-                      display: flex; 
-                      flex-direction: column; 
-                      align-items: center; 
-                      font-family: sans-serif;
-                  }
-
-                  h3 { 
-                      margin-bottom: 20px; 
-                      font-size: 16pt;
-                  }
-                  
-                  img { 
-                      width: 8cm;  
-                      height: 8cm;
-                      
-                      image-rendering: pixelated; 
-                      image-rendering: crisp-edges; 
-                  }
-              </style>
-          </head>
-          <body>
-              <h3>${itemName}</h3>
-              <img src="${qrImageSrc}" onload="window.print();">
-          </body>
-          </html>
+                <head>
+                    <title>Print QR Code - ${itemName}</title>
+                    <style>
+                        @page {
+                            size: auto; 
+                            margin-bottom: 0mm;      
+                        }
+                        body { 
+                            margin: 0; 
+                            padding: 0; 
+                            display: flex; 
+                            flex-direction: column; 
+                            align-items: center; 
+                            font-family: sans-serif;
+                        }
+                        h3 { 
+                            margin-bottom: 20px; 
+                            font-size: 16pt;
+                        }
+                        img { 
+                            width: 8cm;  
+                            height: 8cm;
+                            image-rendering: pixelated; 
+                            image-rendering: crisp-edges; 
+                        }
+                    </style>
+                </head>
+                <body>
+                    <h3>${itemName}</h3>
+                    <img src="${qrImageSrc}" onload="window.print();">
+                </body>
+            </html>
         `); 
         printWindow.document.close();
         printWindow.onafterprint = () => printWindow.close();
