--- a/flask/app/templates/edit.html
+++ b/flask/app/templates/edit.html
@@ -21,16 +21,13 @@
         }
     });
     </script>
-    <div class="top-bar">
-      <div class="back">
-          <a href="{{ url_for('category') }}">
-                <span class="material-icons">arrow_back_ios_new</span> 
+    <div class="header">
+        <div class="header-left">
+            <a href="{{ url_for('category') }}" class="back-btn">
+                <i class="material-icons">arrow_back_ios</i>
             </a>
-      </div>
-      <div class="category">
-          <span id="title">Edit</span>
-      </div>
-        <div></div>
+        </div>
+        <h1 class="page-title" id="title">Edit</h1>
     </div>
 
     {% with messages = get_flashed_messages() %}
